# rust-py-project

./: .gitignore  README.md  justfile
python_app/: pyproject.toml
python_app/src/python_app/: __init__.py
python_app/tests/: __init__.py  test_integration.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
